Fix issue with horizontal scrolling

--- a/styles.css
+++ b/styles.css
@@ -28,9 +28,15 @@
     --nav-dropdown-background-color: rgba(255, 255, 255, 0.2);
 }
 
+
 /* Smooth scroll */
 :root {
     scroll-behavior: smooth;
+}
+
+html, body {
+    max-width: 100%;
+    overflow-x: hidden;
 }
 
 section {
